--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prettier": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|md|css)\"",
+    "clean-local": "npx git-removed-branches --prune",
     "prepare": "husky"
   },
   "dependencies": {
@@ -21,6 +23,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.17.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
