--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,16 @@
-version:
+version: "3.9"
+services:
+  porum-db:
+    image: postgres
+    restart: always
+    container_name: porum-db
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_PASSWORD: secret-password
+      PGDATA: /data/postgres
+    volumes:
+      - postgres:/data/postgres
+
+volumes:
+  postgres:
