Add @t3-oss/env-nextjs package

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@t3-oss/env-nextjs": "^0.10.1",
     "drizzle-orm": "^0.30.10",
     "next": "14.2.3",
     "postgres": "^3.4.4",
