--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,5 +5,5 @@
     "plugin:tailwindcss/recommended",
     "prettier"
   ],
-  "plugins": ["@typescript-eslint"]
+  "plugins": ["@typescript-eslint/eslint-plugin"]
 }
