--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.10.1",
     "drizzle-orm": "^0.30.10",
+    "lucia": "^3.2.0",
     "next": "14.2.3",
     "postgres": "^3.4.4",
     "react": "^18",
