--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "arctic": "^1.9.1",
     "drizzle-orm": "^0.30.10",
     "lucia": "^3.2.0",
     "next": "14.2.3",
+    "oslo": "^1.2.0",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18"
