--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.10.1",
     "arctic": "^1.9.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
     "lucia": "^3.2.0",
+    "lucide-react": "^0.394.0",
     "next": "14.2.3",
     "oslo": "^1.2.0",
     "postgres": "^3.4.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
