--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run db:generate && npm run db:migrate && next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "npm run db:generate && npm run db:migrate && next start",
     "lint": "next lint",
