--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "drizzle-orm": "^0.30.10",
     "lucia": "^3.2.0",
     "lucide-react": "^0.394.0",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "oslo": "^1.2.0",
     "postgres": "^3.4.4",
     "react": "^18",
