--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 DATABASE_URL="postgresql://postgres:secret-password@localhost:5432/postgres"
 NODE_ENV=development
-SECRET_HASH=7c193d920b5ffd81
+
+SECRET_HASH=7c193d920b5ffd81 # pepper for argon2id
+
+STORAGE=local # local | online
+LOCAL_AVATAR_PATH=./public/avatars
+LOCAL_STORAGE_PATH=./public/uploads
+CREATE_ADMIN=true
