Add local image saving upon signup

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ NODE_ENV=development
 SECRET_HASH=7c193d920b5ffd81 # pepper for argon2id
 
 STORAGE=local # local | online
-LOCAL_AVATAR_PATH=./public/avatars
-LOCAL_STORAGE_PATH=./public/uploads
+LOCAL_AVATAR_PATH=public/avatars/
+LOCAL_STORAGE_PATH=public/uploads/
 CREATE_ADMIN=true
