Add ratelimit functionality to auth server actions

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ STORAGE=local # local | online
 LOCAL_AVATAR_PATH=public/avatars/
 LOCAL_STORAGE_PATH=public/uploads/
 CREATE_ADMIN=true
+
+UPSTASH_REDIS_REST_URL="https://peaceful-ostrich-55344.upstash.io"
+UPSTASH_REDIS_REST_TOKEN="********"
