--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_APP_URL='http://localhost:3000'
 DATABASE_URL="postgresql://postgres:secret-password@localhost:5432/postgres"
 NODE_ENV=development
 
@@ -10,3 +11,11 @@ CREATE_ADMIN=true
 
 UPSTASH_REDIS_REST_URL="https://peaceful-ostrich-55344.upstash.io"
 UPSTASH_REDIS_REST_TOKEN="********"
+
+SMTP_HOST='smtp.example-host.com'
+SMTP_PORT=25
+SMTP_USER='smtp_example_username'
+SMTP_PASSWORD='smtp_example_password' 
+
+DISCORD_CLIENT_ID='discord_client_id'
+DISCORD_CLIENT_SECRET='discord_client_secret'
