--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-email/components": "0.0.21",
+    "@react-email/render": "0.0.16",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@upstash/ratelimit": "^1.2.1",
     "arctic": "^1.9.1",
@@ -39,6 +41,7 @@
     "lucia": "^3.2.0",
     "lucide-react": "^0.394.0",
     "next": "^14.2.4",
+    "nodemailer": "^6.9.14",
     "oslo": "^1.2.0",
     "postgres": "^3.4.4",
     "react": "^18",
