--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "drizzle-orm": "^0.30.10",
+    "input-otp": "^1.2.4",
     "lucia": "^3.2.0",
     "lucide-react": "^0.394.0",
     "next": "^14.2.4",
