--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NEXT_PUBLIC_APP_URL='http://localhost:3000'
 DATABASE_URL="postgresql://postgres:secret-password@localhost:5432/postgres"
 NODE_ENV=development
+DEBUG_MODE=true
 
 SECRET_HASH=7c193d920b5ffd81 # pepper for argon2id
 
