Add admin credentials to environment configuration

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ NODE_ENV=development
 DEBUG_MODE=true
 
 SECRET_HASH=7c193d920b5ffd81 # pepper for argon2id
+ADMIN_EMAIL='admin@mail.com'
+ADMIN_PASSWORD='samplepassword'
 
 STORAGE=local # local | online
 LOCAL_AVATAR_PATH=public/avatars/
