--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-email/components": "0.0.21",
     "@react-email/render": "0.0.16",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.51.21",
     "@upstash/ratelimit": "^1.2.1",
     "arctic": "^1.9.1",
     "class-variance-authority": "^0.7.0",
