--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.30.10",
     "input-otp": "^1.2.4",
     "lucia": "^3.2.0",
