--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "db:studio": "drizzle-kit studio --config=drizzle.config.ts"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.30.2",
     "@hookform/resolvers": "^3.6.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@node-rs/argon2": "^1.8.3",
@@ -52,8 +53,10 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-phone-number-input": "^3.4.3",
+    "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.13.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
