--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@react-email/render": "0.0.16",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.51.21",
+    "@uploadthing/react": "^6.7.2",
     "@upstash/ratelimit": "^1.2.1",
     "arctic": "^1.9.1",
     "axios": "^1.7.3",
