Add uploadthing secret and app ID to .env.example

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,13 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "cSpell.words": ["Porum", "Subporum"]
+  "cSpell.words": [
+    "Autosize",
+    "editorjs",
+    "hookform",
+    "Porum",
+    "Subporum",
+    "tanstack",
+    "uploadthing"
+  ]
 }
