--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,6 @@ SMTP_HOST='smtp.example-host.com'
 SMTP_PORT=25
 SMTP_USER='smtp_example_username'
 SMTP_PASSWORD='smtp_example_password'
+
+UPLOADTHING_SECRET=sample_secret
+UPLOADTHING_APP_ID=sample_app_id
