--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-hook-form": "^7.51.5",
     "react-phone-number-input": "^3.4.3",
     "react-textarea-autosize": "^8.5.3",
+    "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
