--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@editorjs/list": "^1.10.0",
     "@editorjs/table": "^2.3.0",
     "@hookform/resolvers": "^3.6.0",
-    "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "@lucia-auth/adapter-drizzle": "1.0.7",
     "@node-rs/argon2": "^1.8.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -51,7 +51,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.30.10",
+    "drizzle-orm": "0.30.10",
     "input-otp": "^1.2.4",
     "lucia": "^3.2.0",
     "lucide-react": "^0.394.0",
