--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@editorjs/table": "^2.3.0",
     "@hookform/resolvers": "^3.6.0",
     "@lucia-auth/adapter-drizzle": "1.0.7",
+    "@mantine/hooks": "^7.12.0",
     "@node-rs/argon2": "^1.8.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
