--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "0.30.10",
+    "drizzle-orm": "^0.32.2",
     "editorjs-react-renderer": "^3.5.1",
     "input-otp": "^1.2.4",
     "lucia": "^3.2.0",
