--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "https": "next dev --experimental-https",
     "build": "next build",
     "start": "npm run db:generate && npm run db:migrate && next start",
     "lint": "next lint",
@@ -52,7 +53,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.32.2",
+    "drizzle-orm": "^0.30.10",
     "editorjs-react-renderer": "^3.5.1",
     "input-otp": "^1.2.4",
     "lucia": "^3.2.0",
