--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-n": "^17.10.2",
+    "eslint-plugin-promise": "^7.1.0",
     "eslint-plugin-tailwindcss": "^3.17.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
