--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@editorjs/code": "^2.9.0",
-    "@editorjs/editorjs": "^2.30.2",
+    "@editorjs/editorjs": "^2.30.4",
     "@editorjs/embed": "^2.7.4",
     "@editorjs/header": "^2.8.7",
     "@editorjs/image": "^2.9.3",
@@ -25,28 +25,28 @@
     "@editorjs/link": "^2.6.2",
     "@editorjs/list": "^1.10.0",
     "@editorjs/table": "^2.3.0",
-    "@hookform/resolvers": "^3.6.0",
-    "@lucia-auth/adapter-drizzle": "1.0.7",
-    "@mantine/hooks": "^7.12.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@lucia-auth/adapter-drizzle": "^1.1.0",
+    "@mantine/hooks": "^7.12.1",
     "@node-rs/argon2": "^1.8.3",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@react-email/components": "0.0.21",
-    "@react-email/render": "0.0.16",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.51.21",
+    "@react-email/components": "^0.0.22",
+    "@react-email/render": "^0.0.17",
+    "@t3-oss/env-nextjs": "^0.11.0",
+    "@tanstack/react-query": "^5.51.23",
     "@uploadthing/react": "^6.7.2",
-    "@upstash/ratelimit": "^1.2.1",
-    "arctic": "^1.9.1",
+    "@upstash/ratelimit": "^2.0.1",
+    "arctic": "^1.9.2",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -56,43 +56,43 @@
     "editorjs-react-renderer": "^3.5.1",
     "input-otp": "^1.2.4",
     "lucia": "^3.2.0",
-    "lucide-react": "^0.394.0",
-    "next": "^14.2.4",
+    "lucide-react": "^0.427.0",
+    "next": "^14.2.5",
     "nodemailer": "^6.9.14",
-    "oslo": "^1.2.0",
+    "oslo": "^1.2.1",
     "postgres": "^3.4.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.5",
-    "react-phone-number-input": "^3.4.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
+    "react-phone-number-input": "^3.4.5",
     "react-textarea-autosize": "^8.5.3",
     "sharp": "^0.33.4",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^22.2.0",
     "@types/nodemailer": "^6.4.15",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "drizzle-kit": "^0.23.2",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "drizzle-kit": "^0.24.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-n": "^17.10.2",
-    "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-tailwindcss": "^3.17.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.5",
-    "postcss": "^8",
-    "prettier": "^3.3.0",
-    "prettier-plugin-tailwindcss": "^0.6.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.6.0",
+    "eslint-plugin-tailwindcss": "^3.17.4",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.8",
+    "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwindcss": "^3.4.9",
+    "typescript": "^5.5.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
