--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "npm run db:generate && npm run db:migrate && next start",
     "lint": "next lint",
+    "types": "tsc --noEmit --pretty",
     "prettier": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|md|css)\"",
     "clean-local": "npx git-removed-branches --prune",
     "db:push": "drizzle-kit push --config=drizzle.config.ts",
